--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,18 @@
 {
   "compilerOptions": {
-    "target": "ES2020",
-    "module": "commonjs",
-    "experimentalDecorators": true,
-    "strict": false,
+    "target": "ES2022",
+    "module": "esnext",
+    "experimentalDecorators": false,
+    "moduleResolution": "bundler",
+    "lib": [
+      "esnext",
+      "esnext.decorators",
+      "dom",
+      "dom.iterable",
+      "deno.ns",
+      "deno.window"
+    ],
+    "strict": true,
     "skipLibCheck": true
   },
   "include": [
