--- a/deno.json
+++ b/deno.json
@@ -5,5 +5,9 @@
   },
   "imports": {
     "@std/assert": "jsr:@std/assert@1"
-  }
+  },
+  "name": "@shapeit/always",
+  "version": "0.1.0",
+  "license": "MIT",
+  "exports": "./mod.ts"
 }
